# multi-core-code

./: CMakeLists.txt  README.md  multi.c
